--- a/package.json
+++ b/package.json
@@ -36,33 +36,36 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.1.2",
+    "@hookform/resolvers": "^2.8.10",
     "@iconify/react": "^3.2.1",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
     "apexcharts": "^3.35.0",
+    "axios": "^0.27.2",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
-    "react-csv": "^2.2.2",
-    "styled-components": "^5.3.5",
     "history": "^5.2.0",
     "lodash": "^4.17.21",
+    "netlify": "^11.0.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.31.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
