--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "history": "^5.2.0",
     "lodash": "^4.17.21",
     "netlify": "^11.0.1",
+    "netlify-cli": "^10.3.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -82,6 +83,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "netlify-lambda": "^1.4.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1"
   }
 }
