--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "axios": "^0.27.2",
     "change-case": "^4.1.2",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
     "history": "^5.2.0",
