--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "google-map-react": "^2.1.10",
     "history": "^5.2.0",
     "lodash": "^4.17.21",
@@ -87,5 +88,10 @@
     "netlify-lambda": "^1.4.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
